RE-507 Remove Deprecated Method Calls